# selfsync

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/nigori/: Cargo.toml
crates/nigori/src/: error.rs  keys.rs  lib.rs  (+1 more)
crates/sync-server/: Cargo.toml  build.rs
crates/sync-server/proto/: bookmark_model_metadata.proto  bookmark_specifics.proto  client_debug_info.proto  contextual_task_specifics.proto  data_type_state.proto  deletion_origin.proto  device_info_specifics.proto  entity_metadata.proto  entity_specifics.proto  history_specifics.proto  loopback_server.proto  nigori_local_data.proto  nigori_specifics.proto  password_sharing_invitation_specifics.proto  password_specifics.proto  product_comparison_specifics.proto  saved_tab_group_specifics.proto  send_tab_to_self_specifics.proto  session_specifics.proto  shared_tab_group_data_specifics.proto  sharing_message_specifics.proto  sync.proto  sync_entity.proto  tab_navigation.proto  theme_android_specifics.proto  theme_ios_specifics.proto  theme_specifics.proto  user_consent_specifics.proto  user_event_specifics.proto  workspace_desk_specifics.proto
crates/sync-server/src/: auth.rs  main.rs  progress.rs  proto.rs  util.rs
crates/sync-server/src/db/: migration.rs  mod.rs
crates/sync-server/src/db/entity/: mod.rs  sync_entity.rs  user.rs
crates/sync-server/src/db/migrator/: m20260101_000001_initial.rs  m20260425_000001_users_add_browser_kind.rs  mod.rs
crates/sync-server/src/handler/: commit.rs  get_updates.rs  init.rs  mod.rs  sync.rs  users.rs
docs/: architecture.md  faq.md
lazycat/: lzc-manifest.yml  package.yml
(+3 files in other folders)
